New pages and new styles

--- a/top.html
+++ b/top.html
@@ -1,43 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Ethplorer Top 50 Widget</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="https://api.ethplorer.io/widget.js?v=5"></script>
-    <style>
-        body {
-            background-color: #333;
-            padding:10px;
-        }
-        #ethplorer-top {
-            border-radius: 8px;
-            max-width: 600px !important;
-        }
-        #ethplorer-top .tx-link {
-            max-width: 450px;
-        }
-        #ethplorer-top tr td:nth-child(3){
-            text-align: right;
-            color: white !important;
-        }
-        #ethplorer-top tr td:nth-child(1){
-            text-align: right;
-            padding-right: 10px;
-            color: #8a8c85 !important;
-        }
-        #ethplorer-top .tx-unknown {
-            color: #676767 !important;
-        }
-    </style>
-</head>
-<body>
-    <div id="ethplorer-top"></div>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            ethplorerWidget.init('#ethplorer-top', 'topTokens', {limit: 50, period: 90});
-        });
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html> <head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Ethplorer — Top 50 Ethereum Tokens</title> <meta property="og:url" content="https://ethplorer.io" /> <meta property="og:title" content="Ethplorer — Top 50 Ethereum Tokens" /><meta property="og:description" content="" /><meta property="og:type" content="website" /><meta property="og:image" content="images/tild3938-6133-4634-a165-396434373638__ethplorerlogo48.png" /><meta property="fb:app_id" content="257953674358265" /><meta name="format-detection" content="telephone=no" /><link rel="canonical" href="https://ethplorer.io"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /><!-- Assets --><link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" /><link rel="stylesheet" href="css/tilda-blocks-2.10.css?t=1487843399" type="text/css" media="all" /><link rel="stylesheet" href="css/tilda-zoom-1.0.min.css" type="text/css" media="all" /><script src="js/jquery-1.10.2.min.js"></script><script src="js/tilda-scripts-2.8.min.js"></script><script src="js/tilda-blocks-2.5.js?t=1487843399"></script><script src="js/tilda-zoom-1.0.min.js"></script><script src="js/lazyload-1.3.min.js"></script><!-- Facebook Pixel Code --><script>!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1629579527306661');
+fbq('track', 'PageView');</script><noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1629579527306661&ev=PageView&noscript=1"
+/></noscript><!-- DO NOT MODIFY --><!-- End Facebook Pixel Code --></head><body class="t-body" style="margin:0;"><!--allrecords--><div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="11344" data-tilda-page-id="627210" data-tilda-page-alias="etop" ><div id="rec14944286" class="r t-screenmin-980px" style=" " data-animationappear="off" data-record-type="456" data-screen-min="980px" ><!-- T456 --><div id="nav14944286marker"></div> <div class="t456__mobile"> <div class="t456__mobile_container"> <div class="t456__mobile_text t-name t-name_md" field="text">Ethplorer</div> <div class="t456__burger"> <span></span> <span></span> <span></span> <span></span> </div> </div> </div><div id="nav14944286" class="t456 t456__hidden t456__positionabsolute " style="background-color: rgba(255,255,255,1); " data-bgcolor-hex="#ffffff" data-bgcolor-rgba="rgba(255,255,255,1)" data-navmarker="nav14944286marker" data-appearoffset="" data-bgopacity-two="" data-menushadow="" data-bgopacity="1" data-menu-items-align="right" data-menu="yes"> <div class="t456__maincontainer t456__c12collumns" style=""> <div class="t456__leftwrapper" style="padding-left:20px;"> <div style="display: block;"> <a href="/" style="color:#ffffff;"> <img src="images/tild3938-6133-4634-a165-396434373638__ethplorerlogo48.png" class="t456__imglogo t456__imglogomobile" imgfield="img" style="max-width: 170px; width: 170px;" alt="Ethplorer"> </a> </div> </div> <div class="t456__rightwrapper t456__menualign_right" style="padding-right:20px;"> <ul class="t456__list"> <li class="t456__list_item"><a class="t-menu__link-item" href="/widgets" style="color:#000000;font-weight:600;padding:5px;" data-menu-item-number="1">Widgets</a></li> <li class="t456__list_item"><a class="t-menu__link-item" href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API" target="_blank" style="color:#000000;font-weight:600;padding:5px;" data-menu-item-number="2">API</a></li> </ul> </div> </div></div><style>@media screen and (max-width: 980px) { #rec14944286 .t456__leftcontainer{ padding: 20px; }
+}
+@media screen and (max-width: 980px) { #rec14944286 .t456__imglogo{ padding: 20px 0; }
+}</style><script type="text/javascript"> $(document).ready(function() { t456_highlight(); });
+$(window).resize(function() { t456_setBg('14944286');
+});
+$(document).ready(function() { t456_setBg('14944286');
+});</script><script type="text/javascript"> $(document).ready(function() { t456_createMobileMenu('14944286'); }); </script> </div><div id="rec14944287" class="r t-screenmax-980px" style=" " data-animationappear="off" data-record-type="327" data-screen-max="980px" ><!-- T282 --><div id="nav14944287marker"></div><div id="nav14944287" class="t282 " data-menu="yes" data-appearoffset=""> <div class="t282__container " style=""> <div class="t282__container__bg" style="background-color: rgba(255,255,255,1); " data-bgcolor-hex="#ffffff" data-bgcolor-rgba="rgba(255,255,255,1)" data-navmarker="nav14944287marker" data-appearoffset="" data-bgopacity="1" data-menu-shadow="0px 1px 3px rgba(0,0,0,0.)"></div> <div class="t282__container__bg_opened" style=";"></div> <div class="t282__menu__content t282__col-12"> <div class="t282__logo__container" style="height:40px;"> <div class="t282__logo__content"><a class="t282__logo" href="#" style="color:#ffffff;"><img src="/images/ethplorer-logo-48.png" style="height: 20px;" class="t280__logo__img" imgfield="img" alt="Ethplorer"></a></div> <div class="t282__burger"> <span style=";"></span> <span style=";"></span> <span style=";"></span> <span style=";"></span> </div> </div> </div> </div> <div class="t282__menu__container t282__closed"> <div class="t282__menu__wrapper" style=";"> <div class="t282__menu"> <div class="t282__menu__items"> <a class="t282__menu__item t-heading t-heading_md t-menu__link-item" href="/widgets" style="color:#000000;font-size:16px;font-weight:600;">Widgets</a> <a class="t282__menu__item t-heading t-heading_md t-menu__link-item" href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API" target="_blank" style="color:#000000;font-size:16px;font-weight:600;">API</a> </div> </div> </div> </div> <div class="t282__overlay t282__closed"></div></div><script type="text/javascript"> $(document).ready(function() { t282_showMenu('14944287'); t282_changeSize('14944287');	t282_highlight(); }); $(window).resize(function() { t282_changeSize('14944287'); }); </script> </div><div id="rec14944289" class="r" style="padding-top:0px;padding-bottom:0px; " data-animationappear="off" data-record-type="46" ><!-- cover --><div class="t-cover" id="recorddiv14944289" bgimgfield="img" style="height:96vh; background-image:url('images/bridgeout.jpg');" ><div class="t-cover__carrier" id="coverCarry14944289" data-content-cover-id="14944289" data-content-cover-bg="images/bridgeout.jpg" data-content-cover-height="96vh" data-content-cover-parallax="fixed" style="background-image:url('');height:96vh; "></div> <div class="t-cover__filter" style="height:96vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.60));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.60));background-image: -o-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.60));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.60));background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.60));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#7f000000', endColorstr='#66000000');"></div> <div class="t-container"> <div class="t-cover__wrapper t-valign_top" style="height:96vh;"> <div class="t032"> <div class="t032__wrapper" data-hook-content="covercontent"> <h1 class="t032__title t-title t-title_md " style="padding-top:100px;padding-bottom:5px;" field="title">Top 50 Ethereum tokens for 90 days</h1> <div class="t-row"> <div class="t-col t-col_2 t-prefix_5"> <div class="t032__line" ></div> </div> </div> <div class="t-row"> <div class="t-col t-col_10 t-prefix_1"> <div class="t032__descr t-descr t-descr_lg " style="font-size:16px;padding-top:0px;" field="descr">grouped by operations count<br /> <br /><strong><span data-redactor-tag="span" style="color: rgba(0, 0, 0, 0);">!!widget-ethplorer-top!!</span></strong><strong></strong><br /></div> </div> </div> <span class="space"></span> </div> </div> </div> </div> </div> </div><div id="rec14944290" class="r" style="padding-top:45px;padding-bottom:30px;background-color:#000000; " data-record-type="65" data-bg-color="#000000"><!-- T056 --><div class="t056"> <div class="t-container t-align_center"> <div class="t-col t-col_10 t-prefix_1"> <div class="t056__title t-name t-name_xl" field="title" style="color:#ffffff;font-family:'Open Sans';">See also</div> <div class="t056__descr t-text t-text_sm" field="descr" style="color:#ffffff;font-family:'Open Sans';"><a href="/last" style="color: rgb(255, 255, 255);"><strong>Recent Token operations monitor<br /></strong></a><br /><a href="/widgets" style="color: rgb(255, 255, 255);"><strong>Token Widgets and Charts for your website</strong></a><br /></div> </div> </div></div></div><div id="rec14944291" class="r" style=" " data-animationappear="off" data-record-type="131" ><!-- T123 --><div class="t123" ><div class="t-container_100 t123__centeredContainer"><div class="t-width t-width_100 "><style>.tx-field { line-height: 1.4;
+}
+a.tx-link { border-bottom:0px !important; box-shadow: none !important; -webkit-box-shadow: none !important;
+}
+#token-top { max-width:100% !important; font-weight: bold !important;
+}</style> <script type="text/javascript">	if(typeof(eWgs) === 'undefined'){ document.write('<scr' + 'ipt src="https://api.ethplorer.io/widget.js?' + new Date().getTime().toString().substr(0,7) + '" async></scr' + 'ipt>'); var eWgs = []; } eWgs.push(function(){ $('strong').each(function(){ if('!!widget-ethplorer-top!!' == $(this).text()){ $(this).after('<div id="token-top"></div>'); $(this).remove();} }); ethplorerWidget.init('#token-top', 'topTokens', {limit: 50, period: 90}, {'header': ''}); }); </script> </div> </div></div></div><div id="rec14944292" class="r" style=" " data-animationappear="off" data-record-type="394" ><style>#allrecords .t-text a,
+#allrecords .t-descr a,
+#allrecords .t-heading a,
+#allrecords .t-title a,
+#allrecords .t-impact-text a,
+#allrecords .t-text-impact a,
+#allrecords .t-name a,
+#allrecords .t-uptitle a{ color: #ffffff; font-weight: inherit; border-bottom: 2px solid #1396e2; -webkit-box-shadow: inset 0px -1px 0px 0px #1396e2; -moz-box-shadow: inset 0px -1px 0px 0px #1396e2; box-shadow: inset 0px -1px 0px 0px #1396e2;
+}</style></div><div id="rec14944293" class="r" style=" " data-animationappear="off" data-record-type="131" ><!-- T123 --><div class="t123" ><div class="t-container_100 "><div class="t-width t-width_100 "><style>.t396__artboard { overflow: visible !important;
+}
+.ethplorer-widget.widget-topTokens { background-blend-mode: darken; background-color: rgba(0, 0, 0, 0.5); border-radius: 7px
+}
+#token-last { background-blend-mode: darken; background-color: rgba(0, 0, 0, 0.5); border-radius: 7px
+}
+#token-history-grouped { background-blend-mode: darken; background-color: rgba(0, 0, 0, 0.5); border-radius: 7px
+}</style> </div> </div></div></div><div id="rec14944294" class="r" style="padding-top:60px;padding-bottom:75px;background-color:#0d0d0d; " data-animationappear="off" data-record-type="420" data-bg-color="#0d0d0d"><!-- T420 --><div class="t420"> <div class="t-container t-align_left"> <div class="t420__col t-col t-col_3"> <a href="#" style="color:#ffffff;font-size:28px;font-weight:600;"><img src="/images/ethplorerlogowhite400.png" class="t420__logo" imgfield="img" style="max-width: 140px;" alt=""></a> <div class="t420__text t-descr t-descr_xxs" field="text"><div style="color:#eeeeee;" data-customstyle="yes">© 2016-2017 <a href="https://everex.one/" target="_blank" style="text-decoration: none; border-bottom: 2px solid rgb(238, 238, 238); box-shadow: rgb(238, 238, 238) 0px -1px 0px 0px inset; color: rgb(238, 238, 238);" rel="color:#eeeeee !important;text-decoration: none;border-bottom: 2px solid #eeeeee;box-shadow: inset 0px -1px 0px 0px #eeeeee;-webkit-box-shadow: inset 0px -1px 0px 0px #eeeeee;-moz-box-shadow: inset 0px -1px 0px 0px #eeeeee;">Everex<br /></a><a href="mailto:support@ethplorer.io" style="color:#eeeeee !important;text-decoration: none;border-bottom: 2px solid #eeeeee;box-shadow: inset 0px -1px 0px 0px #eeeeee;-webkit-box-shadow: inset 0px -1px 0px 0px #eeeeee;-moz-box-shadow: inset 0px -1px 0px 0px #eeeeee;" rel="color:#eeeeee !important;text-decoration: none;border-bottom: 2px solid #eeeeee;box-shadow: inset 0px -1px 0px 0px #eeeeee;-webkit-box-shadow: inset 0px -1px 0px 0px #eeeeee;-moz-box-shadow: inset 0px -1px 0px 0px #eeeeee;">support@ethplorer.io</a>
+<br><a href="/privacy" style="color:#eeeeee !important;text-decoration: none;border-bottom: 2px solid #eeeeee;box-shadow: inset 0px -1px 0px 0px #eeeeee;-webkit-box-shadow: inset 0px -1px 0px 0px #eeeeee;-moz-box-shadow: inset 0px -1px 0px 0px #eeeeee;" rel="color:#eeeeee !important;text-decoration: none;border-bottom: 2px solid #eeeeee;box-shadow: inset 0px -1px 0px 0px #eeeeee;-webkit-box-shadow: inset 0px -1px 0px 0px #eeeeee;-moz-box-shadow: inset 0px -1px 0px 0px #eeeeee;">Privacy & Terms</a><br>
+</div></div> </div> <div class="t420__col t-col t-col_3"> <div class="t420__descr t-descr t-descr_xxs" field="descr" style="color: #ffffff;"><ul> <li> <span style="font-weight: 600;"><a href="/about">About</a> </span></li><li><a href="/widgets" style="" rel=""><strong>Widgets</strong></a></li> <li> <span style="font-weight: 600;"><a href="/about#disqus_thread">Discuss ethplorer</a> </span></li> <li> <span style="font-weight: 600;"><a href="https://github.com/EverexIO/Ethplorer">Sources</a> </span></li> <li> <span style="font-weight: 600;"><a href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API">API</a> </span></li> <li> <a href="https://github.com/EverexIO/Ethplorer/issues"><strong>Submit Idea</strong></a> </li></ul></div> </div> <div class="t420__floatbeaker_lr3"></div> <div> <div class="t420__col t-col t-col_3"> <div class="t420__descr t-descr t-descr_xxs" field="descr2" style="color: #ffffff;"><div style="color:#eeeeee;" data-customstyle="yes"><strong>Donation:</strong><br /><br />ETH: 0x0dE0BCb0703ff8F1aEb8C892eDbE692683bD8030<br />BTC: 1MKVGqyJA9YkVRuDsGCvnYVJ6ivNtfe289</div></div> </div> <div class="t420__col t-col t-col_3"> </div> </div> </div></div></div></div><!--/allrecords--><!-- Stat --><script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-58688985-12', 'auto'); ga('send', 'pageview');</script></body></html>
