--- a/empty.html
+++ b/empty.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-inverse" style="padding-bottom:0px; padding-top:0px;">
         <div class="container">
             <div class="navbar-header">
-              <a class="navbar-logo" href="https://ethplorer.io/"><img title="Ethplorer" src="https://ethplorer.io/images/ethplorer-logo-48.png"></a>
+              <a class="navbar-logo" href="/"><img title="Ethplorer" src="https://ethplorer.io/images/ethplorer-logo-48.png"></a>
             </div>
             <div id="navbar" class="navbar" style="margin-bottom: 0px;">
                 <ul class="nav navbar-nav navbar-right" id="searchform">
