Widgets page updated

--- a/widgets.html
+++ b/widgets.html
@@ -216,12 +216,15 @@
 
                         <div class="block">
                             <div class="row text-white">
-                                <div class="col-xs-12">
+                                <div class="hidden-xs col-sm-2"></div>
+                                <div class="col-xs-12 col-sm-8">
                                     <h1 class="text-left">Widgets and Charts<br />for Ethereum Tokens</h1>
                                 </div>
+                                <div class="hidden-xs col-sm-2"></div>
                             </div>
                             <div class="row text-white text-justify space-bottom">
-                                <div class="col-xs-12 col-sm-8">
+                                <div class="hidden-xs col-sm-2"></div>
+                                <div class="col-xs-12 col-sm-5">
                                     <p>
                                         Display the activity of your token right from your website! Ethplorer offers a few modes of highly customizable widgets. Popular widget modes are Token Activity Chart (for the last month), Recent Transactions, Top Ethereum tokens activity. 
                                     </p>
@@ -232,13 +235,14 @@
                                         Below see different samples of widgets and customizations. 
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
+                                <div class="col-xs-12 col-sm-3">
                                     <div class="alert alert-info">
                                         <p style="font-size: 1.0em;">
                                             <i>Note: the most simple way to get a widget for your token is 1) find your token in Ethplorer, and 2) use the widget link there. </i>
                                         </p>
                                     </div>
                                 </div>
+                                <div class="hidden-xs col-sm-2"></div>
                             </div>
 
                             <div class="row bg-white wide-stripe">
