--- a/widgets.html
+++ b/widgets.html
@@ -77,6 +77,9 @@
             h1, h2 {
                 margin-bottom: 20px;
             }
+            h2 {
+                font-size: 36px;
+            }
             p {
                 font-size: 1.2em;
             }
@@ -238,7 +241,9 @@
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="alert alert-info">
                                         <p style="font-size: 1.0em;">
-                                            <i>Note: the most simple way to get a widget for your token is 1) find your token in Ethplorer, and 2) use the widget link there. </i>
+                                            <i>Note: the most simple way to get a widget for your token is 
+                                                <br />1) find your token in Ethplorer, and 
+                                                <br />2) use the widget link there. </i>
                                         </p>
                                     </div>
                                 </div>
@@ -447,7 +452,7 @@ eWgs.push(function () {
                             <div class="row">
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-8 text-white">
-                                    <h2>Chart Widgets</h2>
+                                    <h2>Text Widgets</h2>
                                 </div>
                                 <div class="hidden-xs col-sm-2"></div>
                             </div>
@@ -648,7 +653,7 @@ eWgs.push(function () {
             <div class="footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-3">
+                        <div class="col-xs-6 col-sm-3">
                             <a href="#" style="color:#ffffff;font-size:28px;font-weight:600;"><img src="/images/ethplorerlogowhite400.png" style="max-width: 140px;" alt=""></a>
                             <div>
                                 <div style="color:#eeeeee;">© 2016-2017 <a href="https://everex.one/" target="_blank" class="small-link">Everex</a>
@@ -657,7 +662,7 @@ eWgs.push(function () {
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-6 col-sm-3">
                             <div class="footer-links" style="color: #ffffff;">
                                 <ul>
                                     <li><span style="font-weight: 600;"><a href="/about">About</a> </span></li>
@@ -669,7 +674,7 @@ eWgs.push(function () {
                                 </ul>
                             </div>
                         </div>
-                        <div>
+                        <div class="col-xs-12 col-sm-6">
                             <div style="color:#eeeeee;" data-customstyle="yes">
                                 <strong>Donation:</strong><br>
                                 <br>ETH:<br>0x0dE0BCb0703ff8F1aEb8C892eDbE692683bD8030
