--- a/widgets.html
+++ b/widgets.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/css/jquery-ui.min.css">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/css/ethplorer.css?v=100>">
+        <link rel="stylesheet" href="/css/ethplorer.css?v=101>">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="referrer" content="never" />
@@ -15,11 +15,11 @@
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
         <script src="/js/jquery-1.10.2.min.js"></script>
-        <script src="/js/jquery-ui.min.js"></script>
+        <script src="/js/jquery-ui.min.js?v=101"></script>
         <script src="/js/bootstrap.min.js"></script>
         <script src="/js/bignumber.js"></script>
-        <script src="/js/ethplorer.js?v=99"></script>
-        <script src="/js/ethplorer-search.js?v=99"></script>
+        <script src="/js/ethplorer.js?v=101"></script>
+        <script src="/js/ethplorer-search.js?v=101"></script>
         <script src="/js/ace.js"></script>
 
         <style type="text/css">
