Widgets page updated

--- a/widgets.html
+++ b/widgets.html
@@ -77,6 +77,9 @@
             h1, h2 {
                 margin-bottom: 20px;
             }
+            h1 {
+                line-height: 50px;
+            }
             h2 {
                 font-size: 36px;
             }
@@ -227,11 +230,11 @@
                             <div class="row text-white">
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-8">
-                                    <h1 class="text-left">Widgets and Charts<br />for Ethereum Tokens</h1>
+                                    <h1>Widgets and Charts<br />for Ethereum Tokens</h1>
                                 </div>
                                 <div class="hidden-xs col-sm-2"></div>
                             </div>
-                            <div class="row text-white text-justify space-bottom">
+                            <div class="row text-white space-bottom">
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-5">
                                     <p>
@@ -257,8 +260,8 @@
                             </div>
 
                             <div class="row bg-white wide-stripe">
-                                <div class="hidden-xs col-sm-3"></div>
-                                <div class="col-xs-12 col-sm-6">
+                                <div class="hidden-xs col-sm-2"></div>
+                                <div class="col-xs-12 col-sm-8">
                                     <div class="add-paddings space-bottom round-top round-bottom">
                                         <h3>How to install widget code</h3>
                                         <div>
@@ -275,7 +278,7 @@
 
                                     </div>
                                 </div>
-                                <div class="hidden-xs col-sm-3"></div>
+                                <div class="hidden-xs col-sm-2"></div>
                             </div>
                         </div>
                         
